; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_mmdevice.c_VolumeSetLocked.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_mmdevice.c_VolumeSetLocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { float, float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, float)* @VolumeSetLocked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @VolumeSetLocked(%struct.TYPE_5__* %0, float %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca float, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store float %1, float* %4, align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  store %struct.TYPE_6__* %9, %struct.TYPE_6__** %5, align 8
  store float 1.000000e+00, float* %6, align 4
  %10 = load float, float* %4, align 4
  %11 = load float, float* %4, align 4
  %12 = fmul float %10, %11
  %13 = load float, float* %4, align 4
  %14 = fmul float %12, %13
  store float %14, float* %4, align 4
  %15 = load float, float* %4, align 4
  %16 = fcmp ogt float %15, 1.000000e+00
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load float, float* %4, align 4
  store float %18, float* %6, align 4
  store float 1.000000e+00, float* %4, align 4
  br label %19

19:                                               ; preds = %17, %2
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = load float, float* %6, align 4
  %22 = call i32 @aout_GainRequest(%struct.TYPE_5__* %20, float %21)
  %23 = load float, float* %6, align 4
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  store float %23, float* %25, align 4
  %26 = load float, float* %4, align 4
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  store float %26, float* %28, align 4
  ret i32 0
}

declare dso_local i32 @aout_GainRequest(%struct.TYPE_5__*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
